--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Posts</h1>
+<h1> <%= @place["name"] %> </h1>
 
 <% for post in @posts %>
   <h2> <%= post["title"]%> </h2>
@@ -7,5 +7,7 @@
 <% end %>
 
 <p>
-<a href="/posts/new">New Post</a>
+  <a href="/posts/new?place_id=<%= @place["id"] %>">New Post</a>
 </p>
+
+
