--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,6 @@
 <h1>New Post</h1>
 
 <%= form_with :model => @post do |form| %>
-  <%# add form fields %>
   <p>
   <%= form.label "title"%>
   <%= form.text_field "title"%>
@@ -11,8 +10,11 @@
   <%= form.text_field "description"%>  </p>
   </p>
   <p>
-  <%= form.label "date""%>
-  <%= form.date_field "body"%>
+  <%= form.label "posted_on", "Date"%>
+  <%= form.date_field "posted_on"%>
+  </p>
+  <p>
+  <%= form.hidden_field "place_id"%>
   </p>
   <%= form.submit %>
 <% end %>
