created show places

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -8,6 +8,7 @@
 
 <p>
   <a href="/posts/new?place_id=<%= @place["id"] %>">New Post</a>
+  <a href="/posts/new?place_id=<%= @place["id"] %>">New Post</a>
 </p>
 
 
