changed redirection after new post

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,7 +1,8 @@
 <h1>Places I've Been</h1>
 
+
 <% for place in @places %>
-  <a href="/places/<%= place["id"]%>"> <%= place["name"]%> </a>
+  <p><a href="/places/<%= place["id"]%>"> <%= place["name"]%> </a></p>
 <% end %>
 
 
